now uses packet to receive message from server
implemented some message handler

--- a/.vertx/file-cache-1c4a763c-dd4c-4814-8cca-15d6801d0029/Home.html
+++ b/.vertx/file-cache-1c4a763c-dd4c-4814-8cca-15d6801d0029/Home.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <meta charset="UTF-8">
     <title>Title</title>
     <style>
@@ -44,10 +43,6 @@
             document.getElementById('input').focus();
         }
 
-        window.onunload = function(){
-            socket.send('/logout');
-        }
-
         socket.onmessage = function(ev){
             if (ev.data instanceof Blob) {
                 var reader = new FileReader();
@@ -78,14 +73,6 @@
                     '@class':
                         'com.gigabyte.tugasakhir.vertx.packet.UserList',
                     handler: showUserList
-                }, {
-                    '@class':
-                        'com.gigabyte.tugasakhir.vertx.packet.ChatMessage',
-                    handler: chatMessage
-                }, {
-                    '@class':
-                        'com.gigabyte.tugasakhir.vertx.packet.WhisperMessage',
-                    handler: whisperMessage
                 }
             ]
 
@@ -97,22 +84,6 @@
                 console.log(json)
         }
 
-        function whisperMessage(json){
-            console.log(json);
-        }
-
-        function chatMessage(json){
-            console.log(json);
-            var sender = json.from;
-            var message = json.chatMessage;
-            var compiled = sender + ' : ' + json.chatMessage;
-
-            var p = document.createElement('p');
-            p.style.whiteSpace = 'pre';
-            p.innerHTML = compiled;
-            chatList.appendChild(p);
-        }
-
         function loginNotif(json){
             var p = document.createElement('p');
             p.innerHTML = json.user.username;
@@ -121,32 +92,18 @@
         }
 
         function logoutNotif(json){
-            var username = json.user.username;
-            var x = document.querySelectorAll('p[username]');
-            console.log(x);
-            for (var i = 0; i < x.length; i++){
-                console.log(x[i].getAttribute('username'));
-                console.log(username);
-                if(x[i].getAttribute('username') == username){
-                    x[i].remove();
-                }
-            }
+
         }
 
         function chatNotif(json){
             var p = document.createElement('p');
-            p.innerHTML = '<b>' + json.notification + '</b>';
+            p.innerHTML = '<b>' + json.getNotification + '</b>';
             p.style.color = '#ffbf11';
             chatList.appendChild(p);
         }
 
         function showUserList(json){
-            for(var k in json.userList) {
-                var p = document.createElement('p');
-                p.innerHTML = k;
-                p.setAttribute('username', k);
-                userList.appendChild(p);
-            }
+
         }
 
         function messageHandler(request){
