--- a/.vertx/file-cache-1091522c-fe2a-4318-bcc5-2d55e9ec32a7/Home.html
+++ b/.vertx/file-cache-1091522c-fe2a-4318-bcc5-2d55e9ec32a7/Home.html
@@ -44,10 +44,6 @@
             document.getElementById('input').focus();
         }
 
-        window.onunload = function(){
-            socket.send('/logout');
-        }
-
         socket.onmessage = function(ev){
             if (ev.data instanceof Blob) {
                 var reader = new FileReader();
@@ -82,10 +78,6 @@
                     '@class':
                         'com.gigabyte.tugasakhir.vertx.packet.ChatMessage',
                     handler: chatMessage
-                }, {
-                    '@class':
-                        'com.gigabyte.tugasakhir.vertx.packet.WhisperMessage',
-                    handler: whisperMessage
                 }
             ]
 
@@ -97,18 +89,13 @@
                 console.log(json)
         }
 
-        function whisperMessage(json){
-            console.log(json);
-        }
-
         function chatMessage(json){
             console.log(json);
             var sender = json.from;
             var message = json.chatMessage;
             var compiled = sender + ' : ' + json.chatMessage;
 
-            var p = document.createElement('p');
-            p.style.whiteSpace = 'pre';
+            var p = document.createElement('pre');
             p.innerHTML = compiled;
             chatList.appendChild(p);
         }
@@ -121,16 +108,7 @@
         }
 
         function logoutNotif(json){
-            var username = json.user.username;
-            var x = document.querySelectorAll('p[username]');
-            console.log(x);
-            for (var i = 0; i < x.length; i++){
-                console.log(x[i].getAttribute('username'));
-                console.log(username);
-                if(x[i].getAttribute('username') == username){
-                    x[i].remove();
-                }
-            }
+
         }
 
         function chatNotif(json){
