--- a/.vertx/file-cache-88a39823-6183-475a-8dea-aad6113505ed/Home.html
+++ b/.vertx/file-cache-88a39823-6183-475a-8dea-aad6113505ed/Home.html
@@ -82,10 +82,6 @@
                     '@class':
                         'com.gigabyte.tugasakhir.vertx.packet.ChatMessage',
                     handler: chatMessage
-                }, {
-                    '@class':
-                        'com.gigabyte.tugasakhir.vertx.packet.WhisperMessage',
-                    handler: whisperMessage
                 }
             ]
 
@@ -95,10 +91,6 @@
             else
                 // buka web developer tool web console
                 console.log(json)
-        }
-
-        function whisperMessage(json){
-            console.log(json);
         }
 
         function chatMessage(json){
@@ -121,13 +113,11 @@
         }
 
         function logoutNotif(json){
-            var username = json.user.username;
+            console.log(json);
+            var username = json.username;
             var x = document.querySelectorAll('p[username]');
-            console.log(x);
             for (var i = 0; i < x.length; i++){
-                console.log(x[i].getAttribute('username'));
-                console.log(username);
-                if(x[i].getAttribute('username') == username){
+                if(x[i] == username){
                     x[i].remove();
                 }
             }
