--- a/.vertx/file-cache-9b5f6aa5-c03c-499a-ba87-91d46c456275/Home.html
+++ b/.vertx/file-cache-9b5f6aa5-c03c-499a-ba87-91d46c456275/Home.html
@@ -44,10 +44,6 @@
             document.getElementById('input').focus();
         }
 
-        window.onunload = function(){
-            socket.send('/logout');
-        }
-
         socket.onmessage = function(ev){
             if (ev.data instanceof Blob) {
                 var reader = new FileReader();
@@ -82,10 +78,6 @@
                     '@class':
                         'com.gigabyte.tugasakhir.vertx.packet.ChatMessage',
                     handler: chatMessage
-                }, {
-                    '@class':
-                        'com.gigabyte.tugasakhir.vertx.packet.WhisperMessage',
-                    handler: whisperMessage
                 }
             ]
 
@@ -97,10 +89,6 @@
                 console.log(json)
         }
 
-        function whisperMessage(json){
-            console.log(json);
-        }
-
         function chatMessage(json){
             console.log(json);
             var sender = json.from;
@@ -108,8 +96,9 @@
             var compiled = sender + ' : ' + json.chatMessage;
 
             var p = document.createElement('p');
-            p.style.whiteSpace = 'pre';
-            p.innerHTML = compiled;
+            var pre = document.createElement('pre');
+            pre.innerHTML = compiled;
+            p.appendChild(pre);
             chatList.appendChild(p);
         }
 
@@ -121,16 +110,7 @@
         }
 
         function logoutNotif(json){
-            var username = json.user.username;
-            var x = document.querySelectorAll('p[username]');
-            console.log(x);
-            for (var i = 0; i < x.length; i++){
-                console.log(x[i].getAttribute('username'));
-                console.log(username);
-                if(x[i].getAttribute('username') == username){
-                    x[i].remove();
-                }
-            }
+
         }
 
         function chatNotif(json){
