--- a/.vertx/file-cache-8e5274bc-7454-46b1-88bf-750b7c0c2ecb/Home.html
+++ b/.vertx/file-cache-8e5274bc-7454-46b1-88bf-750b7c0c2ecb/Home.html
@@ -40,9 +40,13 @@
         var socket = new WebSocket("ws://localhost:8080");
 
         window.onload = function(){
-            socket.onopen = function() {
-                socket.send('/getUsers');
-                document.getElementById('input').focus();
+            var loaded = 1;
+            while(loaded == 1) {
+                try {
+                    socket.send('/getUsers');
+                    document.getElementById('input').focus();
+                    loaded = 0;
+                } catch (e) {}
             }
         }
 
@@ -100,15 +104,7 @@
         }
 
         function whisperMessage(json){
-            var sender = json.from;
-            var message = json.whisperMessage;
-            var compiled = sender + " (Whisper) : " + message;
-
-            var p = document.createElement('p');
-            p.style.whiteSpace = 'pre';
-            p.style.color = 'blue';
-            p.innerHTML = compiled;
-            chatList.appendChild(p);
+            console.log(json);
         }
 
         function chatMessage(json){
