--- a/.vertx/file-cache-2caa005e-04f6-4fd9-afee-1ab16438fb28/Home.html
+++ b/.vertx/file-cache-2caa005e-04f6-4fd9-afee-1ab16438fb28/Home.html
@@ -40,10 +40,12 @@
         var socket = new WebSocket("ws://localhost:8080");
 
         window.onload = function(){
-            socket.onopen = function() {
+            var loaded = 1;
+            try {
                 socket.send('/getUsers');
                 document.getElementById('input').focus();
-            }
+                loaded = 0;
+            } catch (e) {console.log(e);}
         }
 
         window.onunload = function(){
@@ -100,15 +102,7 @@
         }
 
         function whisperMessage(json){
-            var sender = json.from;
-            var message = json.whisperMessage;
-            var compiled = sender + " (Whisper) : " + message;
-
-            var p = document.createElement('p');
-            p.style.whiteSpace = 'pre';
-            p.style.color = 'blue';
-            p.innerHTML = compiled;
-            chatList.appendChild(p);
+            console.log(json);
         }
 
         function chatMessage(json){
