--- a/.vertx/file-cache-3e1cb546-e4f9-423a-be2a-f02d8ef4a8ba/Home.html
+++ b/.vertx/file-cache-3e1cb546-e4f9-423a-be2a-f02d8ef4a8ba/Home.html
@@ -37,13 +37,11 @@
     </div>
     <input type="text" id="input"><button type="button" id="send">Send</button>
     <script>
-        var socket = new WebSocket("ws://localhost:8080");
+        var socket = new WebSocket("ws://localhost:8088");
 
         window.onload = function(){
-            socket.onopen = function() {
-                socket.send('/getUsers');
-                document.getElementById('input').focus();
-            }
+            socket.send('/getUsers');
+            document.getElementById('input').focus();
         }
 
         window.onunload = function(){
@@ -100,22 +98,14 @@
         }
 
         function whisperMessage(json){
-            var sender = json.from;
-            var message = json.whisperMessage;
-            var compiled = sender + " (Whisper) : " + message;
-
-            var p = document.createElement('p');
-            p.style.whiteSpace = 'pre';
-            p.style.color = 'blue';
-            p.innerHTML = compiled;
-            chatList.appendChild(p);
+            console.log(json);
         }
 
         function chatMessage(json){
             console.log(json);
             var sender = json.from;
             var message = json.chatMessage;
-            var compiled = sender + ' : ' + message;
+            var compiled = sender + ' : ' + json.chatMessage;
 
             var p = document.createElement('p');
             p.style.whiteSpace = 'pre';
@@ -131,7 +121,6 @@
         }
 
         function logoutNotif(json){
-            console.log(json);
             var username = json.user.username;
             var x = document.querySelectorAll('p[username]');
             console.log(x);
@@ -145,7 +134,6 @@
         }
 
         function chatNotif(json){
-            console.log(json);
             var p = document.createElement('p');
             p.innerHTML = '<b>' + json.notification + '</b>';
             p.style.color = '#ffbf11';
