--- a/.vertx/file-cache-43e32826-41f6-4dbe-86b1-44314abb59a1/Home.html
+++ b/.vertx/file-cache-43e32826-41f6-4dbe-86b1-44314abb59a1/Home.html
@@ -40,7 +40,7 @@
         var socket = new WebSocket("ws://localhost:8080");
 
         window.onload = function(){
-            socket.onopen = function() {
+            socket.onopen = function(ev) {
                 socket.send('/getUsers');
                 document.getElementById('input').focus();
             }
@@ -100,15 +100,7 @@
         }
 
         function whisperMessage(json){
-            var sender = json.from;
-            var message = json.whisperMessage;
-            var compiled = sender + " (Whisper) : " + message;
-
-            var p = document.createElement('p');
-            p.style.whiteSpace = 'pre';
-            p.style.color = 'blue';
-            p.innerHTML = compiled;
-            chatList.appendChild(p);
+            console.log(json);
         }
 
         function chatMessage(json){
