--- a/.vertx/file-cache-83f9edc8-0456-4782-9b2c-79d2af84ad24/Home.html
+++ b/.vertx/file-cache-83f9edc8-0456-4782-9b2c-79d2af84ad24/Home.html
@@ -40,10 +40,8 @@
         var socket = new WebSocket("ws://localhost:8080");
 
         window.onload = function(){
-            socket.onopen = function() {
-                socket.send('/getUsers');
-                document.getElementById('input').focus();
-            }
+            socket.send('/getUsers');
+            document.getElementById('input').focus();
         }
 
         window.onunload = function(){
@@ -100,15 +98,7 @@
         }
 
         function whisperMessage(json){
-            var sender = json.from;
-            var message = json.whisperMessage;
-            var compiled = sender + " (Whisper) : " + message;
-
-            var p = document.createElement('p');
-            p.style.whiteSpace = 'pre';
-            p.style.color = 'blue';
-            p.innerHTML = compiled;
-            chatList.appendChild(p);
+            console.log(json);
         }
 
         function chatMessage(json){
