--- a/.vertx/file-cache-e22944b2-6fa7-4308-a099-4a6fe0e1ac2d/Home.html
+++ b/.vertx/file-cache-e22944b2-6fa7-4308-a099-4a6fe0e1ac2d/Home.html
@@ -100,15 +100,7 @@
         }
 
         function whisperMessage(json){
-            var sender = json.from;
-            var message = json.whisperMessage;
-            var compiled = sender + " (Whisper) : " + message;
-
-            var p = document.createElement('p');
-            p.style.whiteSpace = 'pre';
-            p.style.color = 'blue';
-            p.innerHTML = compiled;
-            chatList.appendChild(p);
+            console.log(json);
         }
 
         function chatMessage(json){
