--- a/.vertx/file-cache-e9f77cc1-52a4-456c-97b9-c5be145583d1/Home.html
+++ b/.vertx/file-cache-e9f77cc1-52a4-456c-97b9-c5be145583d1/Home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>-->
     <meta charset="UTF-8">
     <title>Title</title>
     <style>
@@ -37,13 +37,11 @@
     </div>
     <input type="text" id="input"><button type="button" id="send">Send</button>
     <script>
-        var socket = new WebSocket("ws://localhost:8080");
+        var socket = new WebSocket("ws://localhost:8088");
 
         window.onload = function(){
-            socket.onopen = function() {
-                socket.send('/getUsers');
-                document.getElementById('input').focus();
-            }
+            socket.send('/getUsers');
+            document.getElementById('input').focus();
         }
 
         window.onunload = function(){
@@ -100,22 +98,14 @@
         }
 
         function whisperMessage(json){
-            var sender = json.from;
-            var message = json.whisperMessage;
-            var compiled = sender + " (Whisper) : " + message;
-
-            var p = document.createElement('p');
-            p.style.whiteSpace = 'pre';
-            p.style.color = 'blue';
-            p.innerHTML = compiled;
-            chatList.appendChild(p);
+            console.log(json);
         }
 
         function chatMessage(json){
             console.log(json);
             var sender = json.from;
             var message = json.chatMessage;
-            var compiled = sender + ' : ' + message;
+            var compiled = sender + ' : ' + json.chatMessage;
 
             var p = document.createElement('p');
             p.style.whiteSpace = 'pre';
@@ -131,7 +121,6 @@
         }
 
         function logoutNotif(json){
-            console.log(json);
             var username = json.user.username;
             var x = document.querySelectorAll('p[username]');
             console.log(x);
