--- a/.vertx/file-cache-552895d6-281a-4075-9d63-09c0b467d047/Home.html
+++ b/.vertx/file-cache-552895d6-281a-4075-9d63-09c0b467d047/Home.html
@@ -150,8 +150,10 @@
         }
 
         function logoutNotif(json){
+            console.log(json);
             var username = json.user.username;
             var x = document.querySelectorAll('p[username]');
+            console.log(x);
             for (var i = 0; i < x.length; i++){
                 console.log(x[i].getAttribute('username'));
                 console.log(username);
