--- a/.vertx/file-cache-e7599a0b-d8f2-4a6e-b85f-a8dc258da504/Home.html
+++ b/.vertx/file-cache-e7599a0b-d8f2-4a6e-b85f-a8dc258da504/Home.html
@@ -57,7 +57,7 @@
                 p.innerHTML = message;
                 userList.appendChild(p);
             } else {
-                var chatList = document.querySelector('chatList);
+                var chatList = document.querySelector('chatList');
                 var p = document.createElement('p');
                 p.innerHTML = message;
                 chatList.appendChild(p);
