--- a/.vertx/file-cache-579e5416-b5b8-4e92-aef4-c9e7e3451e13/Home.html
+++ b/.vertx/file-cache-579e5416-b5b8-4e92-aef4-c9e7e3451e13/Home.html
@@ -150,8 +150,10 @@
         }
 
         function logoutNotif(json){
+            console.log(json);
             var username = json.user.username;
             var x = document.querySelectorAll('p[username]');
+            console.log(x);
             for (var i = 0; i < x.length; i++){
                 console.log(x[i].getAttribute('username'));
                 console.log(username);
