--- a/.vertx/file-cache-a67635a5-05e4-4202-9fa3-6aac9501eedd/Home.html
+++ b/.vertx/file-cache-a67635a5-05e4-4202-9fa3-6aac9501eedd/Home.html
@@ -150,8 +150,10 @@
         }
 
         function logoutNotif(json){
+            console.log(json);
             var username = json.user.username;
             var x = document.querySelectorAll('p[username]');
+            console.log(x);
             for (var i = 0; i < x.length; i++){
                 console.log(x[i].getAttribute('username'));
                 console.log(username);
