--- a/.vertx/file-cache-dd1d42eb-6d80-4bc4-b0c0-9203c93b7d19/Home.html
+++ b/.vertx/file-cache-dd1d42eb-6d80-4bc4-b0c0-9203c93b7d19/Home.html
@@ -150,8 +150,10 @@
         }
 
         function logoutNotif(json){
+            console.log(json);
             var username = json.user.username;
             var x = document.querySelectorAll('p[username]');
+            console.log(x);
             for (var i = 0; i < x.length; i++){
                 console.log(x[i].getAttribute('username'));
                 console.log(username);
