--- a/.vertx/file-cache-f947d121-a065-4edd-a048-8ed9e7232762/Home.html
+++ b/.vertx/file-cache-f947d121-a065-4edd-a048-8ed9e7232762/Home.html
@@ -150,8 +150,10 @@
         }
 
         function logoutNotif(json){
+            console.log(json);
             var username = json.user.username;
             var x = document.querySelectorAll('p[username]');
+            console.log(x);
             for (var i = 0; i < x.length; i++){
                 console.log(x[i].getAttribute('username'));
                 console.log(username);
