--- a/.vertx/file-cache-a4e482dc-d451-4b6b-bd67-ffee5a82d9a3/Home.html
+++ b/.vertx/file-cache-a4e482dc-d451-4b6b-bd67-ffee5a82d9a3/Home.html
@@ -96,13 +96,15 @@
 <body>
 	<div class="main"> 
 		<div id="chatList">
-            <h1>Chat List</h1>
-            <hr>
+        <h1>Chat List</h1>
+        <hr>
         </div>
-        <div id="userList">
-            <h1>User List</h1>
-            <hr>
-        </div>
+    </div>
+    <div id="userList">
+        <h1>User List</h1>
+        <hr>
+    </div>
+    <div>
         <input type="text" id="input" placeholder="input your message"><button type="button" id="send" class="btn btn-success">Send</button>
 	</div>
     
@@ -112,8 +114,8 @@
         const userList = document.getElementById('userList');
         const chatList = document.getElementById('chatList');
 
-        socket.onopen = function() {
-            window.onload = function(){
+        window.onload = function(){
+            socket.onopen = function() {
                 socket.send('/getUsers');
                 document.getElementById('input').focus();
             }
