fix font contrast and UI bug

--- a/.vertx/file-cache-3e3828f7-2cfb-45cd-939a-d384172af1ca/Home.html
+++ b/.vertx/file-cache-3e3828f7-2cfb-45cd-939a-d384172af1ca/Home.html
@@ -66,6 +66,10 @@
 			  font-family: 'Gingham Variable', sans-serif;
 			  font-variation-settings: "wght" 123, "wdth" 245;
 			  transition: font-variation-settings 0.5s ease-out;
+			  
+			  &:hover {
+			    font-variation-settings: "wght" 980, "wdth" 897;
+			  }
 		}
 		p {
 		  margin: 0 0 1.5em;
@@ -73,7 +77,7 @@
 		}
 		#send {
 			width: 10%;
-			height: 9%;
+			height: 10%;
 		}
 		input[type=text]{
 		    width:70%;
@@ -81,7 +85,7 @@
 		    border-radius:4px;
 		    margin:8px 0;
 		    outline:none;
-		    font-size: 16px;
+		    font-size: 18px;
 		    padding:8px;
 		    box-sizing:border-box;
 		    transition:.3s;
@@ -103,8 +107,7 @@
             <h1 style="font-weight: bold">User List</h1>
             <hr>
         </div>
-        <input type="text" id="input" placeholder="input your message">
-        <button type="button" id="send"><i class="fa fa-location-arrow"></i></button>
+        <input type="text" id="input" placeholder="input your message"><button type="button" id="send" class="btn btn-success">Send</button>
 	</div>
     
     <script>
