--- a/.vertx/file-cache-1f21c8fe-70b4-4fc7-95ef-a5c8d1f23be8/Home.html
+++ b/.vertx/file-cache-1f21c8fe-70b4-4fc7-95ef-a5c8d1f23be8/Home.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta charset="UTF-8">
-    <title>AY Messenger</title>
+    <title>Title</title>
     <style>
     	.main{
     		height: 80%;
@@ -66,14 +66,19 @@
 			  font-family: 'Gingham Variable', sans-serif;
 			  font-variation-settings: "wght" 123, "wdth" 245;
 			  transition: font-variation-settings 0.5s ease-out;
+			  
+			  &:hover {
+			    font-variation-settings: "wght" 980, "wdth" 897;
+			  }
 		}
 		p {
 		  margin: 0 0 1.5em;
           font-family: sans-serif;
 		}
 		#send {
+			
 			width: 10%;
-			height: 9%;
+			height: 7.5%;
 		}
 		input[type=text]{
 		    width:70%;
@@ -81,7 +86,7 @@
 		    border-radius:4px;
 		    margin:8px 0;
 		    outline:none;
-		    font-size: 16px;
+		    font-size: 18px;
 		    padding:8px;
 		    box-sizing:border-box;
 		    transition:.3s;
@@ -103,8 +108,7 @@
             <h1 style="font-weight: bold">User List</h1>
             <hr>
         </div>
-        <input type="text" id="input" placeholder="input your message">
-        <button type="button" id="send"><i class="fa fa-location-arrow"></i></button>
+        <input type="text" id="input" placeholder="input your message"><button type="button" id="send" class="btn btn-success">Send</button>
 	</div>
     
     <script>
