--- a/.vertx/file-cache-7518bf66-8b6c-457c-b0fa-1173c5dd1d38/Home.html
+++ b/.vertx/file-cache-7518bf66-8b6c-457c-b0fa-1173c5dd1d38/Home.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta charset="UTF-8">
-    <title>AY Messenger</title>
+    <title>Title</title>
     <style>
     	.main{
     		height: 80%;
@@ -21,15 +21,11 @@
             float: left;
             border-style: groove;
         }
-        #userList{
+        #userList {
             border-style: groove;
             overflow-y: scroll;
             height: 100%;
             width: 26%;
-            color : black;
-            font-family: sans-serif;
-            font-size: 18px;
-            font-weight: bold;
         }
         #input{
             width: 90%;
@@ -66,14 +62,18 @@
 			  font-family: 'Gingham Variable', sans-serif;
 			  font-variation-settings: "wght" 123, "wdth" 245;
 			  transition: font-variation-settings 0.5s ease-out;
+			  
+			  &:hover {
+			    font-variation-settings: "wght" 980, "wdth" 897;
+			  }
 		}
 		p {
 		  margin: 0 0 1.5em;
-          font-family: sans-serif;
 		}
 		#send {
+			
 			width: 10%;
-			height: 9%;
+			height: 7.5%;
 		}
 		input[type=text]{
 		    width:70%;
@@ -81,7 +81,7 @@
 		    border-radius:4px;
 		    margin:8px 0;
 		    outline:none;
-		    font-size: 16px;
+		    font-size: 14	px;
 		    padding:8px;
 		    box-sizing:border-box;
 		    transition:.3s;
@@ -96,15 +96,14 @@
 <body>
 	<div class="main"> 
 		<div id="chatList">
-            <h1 style="font-weight: bold">Chat List</h1>
+            <h1>Chat List</h1>
             <hr>
         </div>
         <div id="userList">
-            <h1 style="font-weight: bold">User List</h1>
+            <h1>User List</h1>
             <hr>
         </div>
-        <input type="text" id="input" placeholder="input your message">
-        <button type="button" id="send"><i class="fa fa-location-arrow"></i></button>
+        <input type="text" id="input" placeholder="input your message"><button type="button" id="send" class="btn btn-success">Send</button>
 	</div>
     
     <script>
@@ -184,8 +183,7 @@
 
             var p = document.createElement('p');
             p.style.whiteSpace = 'pre';
-            p.style.color = '#FFFFFF';
-            p.style.backgroundColor = '#3C6478';
+            p.style.color = 'blue';
             p.style.fontSize = '18px';
             p.innerHTML = compiled;
             chatList.appendChild(p);
@@ -195,11 +193,11 @@
             var sender = json.from;
             var message = json.whisperMessage;
             var compiled = sender + " (Whisper) : " + message;
+
             var p = document.createElement('p');
             p.style.whiteSpace = 'pre';
-            p.style.color = '#FFFFFF';
+            p.style.color = 'blue';
             p.style.fontSize = '18px';
-            p.style.backgroundColor = '#3C6478';
             p.innerHTML = compiled;
             chatList.appendChild(p);
         }
@@ -241,7 +239,7 @@
             console.log(json);
             var p = document.createElement('p');
             p.innerHTML = '<b>' + json.notification + '</b>';
-            p.style.color = '#ff6e00';
+            p.style.color = '#ffbf11';
             p.style.fontSize = '18px';
             chatList.appendChild(p);
         }
@@ -251,6 +249,7 @@
                 var p = document.createElement('p');
                 p.innerHTML = k;
                 p.setAttribute('username', k);
+                p.style.fontSize = '18px';
                 userList.appendChild(p);
             }
         }
