--- a/src/main/resources/Home.html
+++ b/src/main/resources/Home.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>AY Messenger</title>
     <style>
     	.main{
     		height: 80%;
@@ -21,17 +21,21 @@
             float: left;
             border-style: groove;
         }
-        #userList {
+        #userList{
             border-style: groove;
             overflow-y: scroll;
             height: 100%;
             width: 26%;
+            color : black;
+            font-family: sans-serif;
+            font-size: 18px;
+            font-weight: bold;
         }
         #input{
             width: 90%;
         }
         #send{
-            width: 8.5%;
+            width: 10%;
         }
         html {
 		  background: lightgrey;
@@ -62,26 +66,44 @@
 			  font-family: 'Gingham Variable', sans-serif;
 			  font-variation-settings: "wght" 123, "wdth" 245;
 			  transition: font-variation-settings 0.5s ease-out;
-			  
+
 			  &:hover {
 			    font-variation-settings: "wght" 980, "wdth" 897;
 			  }
 		}
 		p {
 		  margin: 0 0 1.5em;
+          font-family: sans-serif;
 		}
+        #send:active{
+            top:0.3em;
+        }
 		#send {
-			
-			width: 10%;
-			height: 7.5%;
+            /*display:inline-block;*/
+            padding: 8px;
+            /*margin:0 0.3em 0.3em 0;*/
+            /*border-radius:0.15em;*/
+            box-sizing: border-box;
+            text-decoration:none;
+            font-family:'Roboto',sans-serif;
+            text-transform:uppercase;
+            font-weight:400;
+            color:#FFFFFF;
+            background-color:#3369ff;
+            /*box-shadow:inset 0 -0.6em 0 -0.35em rgba(0,0,0,0.17);*/
+            text-align:center;
+            /*position:relative;*/
+			width: 9%;
+			height: 8.5%;
 		}
+
 		input[type=text]{
 		    width:70%;
 		    border:2px solid #aaa;
 		    border-radius:4px;
-		    margin:8px 0;
+		    /*margin:8px 0;*/
 		    outline:none;
-		    font-size: 14	px;
+		    font-size: 16px;
 		    padding:8px;
 		    box-sizing:border-box;
 		    transition:.3s;
@@ -96,14 +118,14 @@
 <body>
 	<div class="main"> 
 		<div id="chatList">
-            <h1>Chat List</h1>
+            <h1 style="font-weight: bold">Chat List</h1>
             <hr>
         </div>
         <div id="userList">
-            <h1>User List</h1>
+            <h1 style="font-weight: bold">User List</h1>
             <hr>
         </div>
-        <input type="text" id="input" placeholder="input your message"><button type="button" id="send" class="btn btn-success">Send</button>
+        <input type="text" id="input" placeholder="input your message"><button type="button" id="send"><i class="fa fa-plane"></i></button>
 	</div>
     
     <script>
@@ -183,7 +205,9 @@
 
             var p = document.createElement('p');
             p.style.whiteSpace = 'pre';
-            p.style.color = 'blue';
+            p.style.color = '#FFFFFF';
+            p.style.backgroundColor = '#3C6478';
+            p.style.fontSize = '18px';
             p.innerHTML = compiled;
             chatList.appendChild(p);
         }
@@ -192,10 +216,11 @@
             var sender = json.from;
             var message = json.whisperMessage;
             var compiled = sender + " (Whisper) : " + message;
-
             var p = document.createElement('p');
             p.style.whiteSpace = 'pre';
-            p.style.color = 'blue';
+            p.style.color = '#FFFFFF';
+            p.style.fontSize = '18px';
+            p.style.backgroundColor = '#3C6478';
             p.innerHTML = compiled;
             chatList.appendChild(p);
         }
@@ -208,6 +233,7 @@
 
             var p = document.createElement('p');
             p.style.whiteSpace = 'pre';
+            p.style.fontSize = '18px';
             p.innerHTML = compiled;
             chatList.appendChild(p);
         }
@@ -216,6 +242,7 @@
             var p = document.createElement('p');
             p.innerHTML = json.user.username;
             p.setAttribute('username', json.user.username);
+            p.style.fontSize = '18px';
             userList.appendChild(p);
         }
 
@@ -235,7 +262,8 @@
             console.log(json);
             var p = document.createElement('p');
             p.innerHTML = '<b>' + json.notification + '</b>';
-            p.style.color = '#ffbf11';
+            p.style.color = '#ff6e00';
+            p.style.fontSize = '18px';
             chatList.appendChild(p);
         }
 
